Resolve SonarQube issues and related improvements
- Replace deprecated JsonSerializer/JsonDeserializer with
    JacksonJsonSerializer/JacksonJsonDeserializer for Spring Boot 4 compatibility
- Replace deprecated YangIRSourceInfoExtractor.forYangText() with
    TextToIRTransformer.transformText() and YangIRSource.extractSourceInfo()
- Fix regex non-linear backtracking in CHECKSUM_EXCEPTION_PATTERN (SonarQube S5852)
- Reorder JaCoCo executions so coverage report is generated before the coverage gate check
- Restored code coverage for cps-service to 100% (one small test missing)
- Other deprecated/renamed methods/constants like HTTP error codes
- Use HashMap.newHashMap(size) for hash map construction and similar for sets etc. (recommended by Sonar)
- Use .toList instead of (Collectors.toList) where possible (as recommended by Sonar)

Issue-ID: CPS-475

Change-Id: Iab7fd6e3c3b3259c7d63bf2d8c5e24f6c1c27106
Signed-off-by: ToineSiebelink <toine.siebelink@est.tech>